# NotesOnAlgorithms

./: CMakeLists.txt  README.md
src/: main.cpp
src/binarysearch/: binary.cpp  binary.h
src/sorting/: boublesort.cpp  boublesort.h
src/sorting/recursivesort/: mergesort.cpp  mergesort.h  quicksort.cpp  quicksort.h
